Temporary fix to right-hand-side gap

--- a/_ltu-components/src/text/scss/_text.scss
+++ b/_ltu-components/src/text/scss/_text.scss
@@ -21,6 +21,7 @@ body {
     font-size: 1rem;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
 }
 
 h1, .h1,
